# pytorch_playground

./: .gitignore  README.md  TODO.md  model_classifier.pth  model_state.pt  pyproject.toml
from_python_to_numpy/: README.md
from_python_to_numpy/game-of-life/: game-of-life-numpy.py  game-of-life-plain-python.py
imdb_sentiments_analysis/: README.md  with_scitkit_learn.py
imdb_sentiments_analysis/with_hf_transformer/: Makefile  embedding_build.py  embedding_classification.py  embedding_classify.py  embedding_model_name.py  embedding_view_dim_reduction.py  embedding_view_umap.py
mnist_classifier/: do_eval.py  do_training.py  eval.py  model.py  model_classifier.pth  training.py  view.py
pytorch_autoencoder/: autoencoder_model.py  autoencoder_training.py  autoencoder_view.py
pytorch_autoencoder/data/: autoencoder_model.pth
pytorch_cifar10_classifier/: classifier_main.py
pytorch_examples/: 60_min_blitz_autograd_1.py  60_min_blitz_nn.py  60_min_blitz_tensor_1.py  60_min_blitz_tensor_2.py  60_min_blitz_tensor_3.py  60_min_blitz_tensor_4.py  README.md  classification_mnist_convnet.py  pytorch_examples_tensor.py
pytorch_lightning/: lighting_main.py
pytorch_mnist_autoencoder/: TODO.md  autoencoder_model.py  autoencoder_training.py  autoencoder_view.py  embedding_build.py  embedding_cluster_kmeans.py
